fix spacing on prism

--- a/src/templates/prism-theme.css
+++ b/src/templates/prism-theme.css
@@ -150,8 +150,6 @@ pre[data-line] {
 
 .gatsby-highlight {
   margin-bottom: 1.75rem;
-  margin-left: -1.3125rem;
-  margin-right: -1.3125rem;
   border-radius: 10px;
   background: #292929;
   -webkit-overflow-scrolling: touch;
